# EpiForecaster

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  EPIFORECASTER.md  MePreCiSa-E3.3.md  PLAN_COMPILE_BACKWARD.md  README.md  REFACTOR_SUMMARY.md  REGION2VEC.md  TODO.md  __init__.py  cli.py  constants.py  opencode.json  pyproject.toml  ruff.toml  scratch.ipynb  setup.cfg  spells.sh  syncback_from_mn5.sh  syncback_from_mn5_raw.sh  syncback_hpsearch_from_mn5.sh  syncback_optuna_from_mn5.sh  syncto_mn5.sh  syncto_mn5_raw.sh
.cluster/: dispatch.conf  mn5.conf
configs/: preprocess_cases_only.yaml  preprocess_filtered.yaml  preprocess_full.yaml  preprocess_local_synth.yaml  preprocess_mn5_synth.yaml  preprocess_mn5_synth_holt_damped.yaml  preprocess_real_holt.yaml  preprocess_synthetic.yaml  train_cases_only.yaml  train_epifor_curriculum.yaml  train_epifor_full.yaml  train_epifor_mn5_full.yaml  train_epifor_nobio.yaml  train_epifor_nomob.yaml  train_epifor_real_local.yaml  train_epifor_sparsity_curriculum.yaml  train_epifor_synth.yaml  train_epifor_synth_local.yaml  train_epifor_temporal.yaml  train_joint_inference.yaml  train_regions.yaml
data/: __init__.py  biomarker_preprocessor.py  cases_loader.py  cases_preprocessor.py  clinical_series_preprocessor.py  collate.py  curriculum_builder.py  dataset_alignment.py  dataset_factory.py  dataset_storage.py  dtypes.py  edar_attention_loader.py  edar_biomarker_loader.py  ego_graph_dataset.py  ego_graph_utils.py  epi_batch.py  epi_dataset.py  feature_extractor.py  mobility_loader.py  mobility_preprocessor.py  region_data.py  region_embedding_store.py  region_graph_dataset.py  region_graph_preprocessor.py  samplers.py  subgraph_loader.py  wastewater_preprocessing.py  zone_registry.py
dataviz/: __init__.py  ablation_plots.py  adjacency_graph_comparison.py  age_mask_plots.py  canonical_biomarker_series.py  canonical_cross_series_correlation.py  canonical_deaths.py  canonical_hospitalizations.py  canonical_input_comparison.py  canonical_vaccination.py  cases_sparsity_analysis.py  catchment_cases_vs_biomarkers.py  edge_weight_analysis.py  eval_head_plots.py  granular_comparison.py  granular_crossval.py  input_series_plots.py  khop_neighbors.py  missing_permit_tradeoff.py  mobility_ego_lockdown_analysis.py  mobility_lockdown_analysis.py  mobility_overview_analysis.py  mobility_regime_analysis.py  neighborhood_global_regression.py  neighborhood_global_regression_README.md  neighborhood_trace_density.py  raw_deaths.py  raw_hospitalizations.py  region_embedding_diagnostics.py  sparsity_analysis.py  timeseries_analysis.py  timeseries_filtered.py
docs/: CURRENT_OBSERVATION_LOSS_SCALING.md  GRAPHTYPE_ABLATION.md  MITMA_REAL_MOBILITY_DATA_CONTEXT.md  PRIOR_AWARE_GRADNORM.md  SYNTHETIC_DATA_CONTEXT.md  marenostrum5_hardware.md
evaluation/: __init__.py  aggregate_export.py  baseline_eval.py  baseline_models.py  epiforecaster_eval.py  eval_loop.py  granular_export.py  loaders.py  losses.py  metrics.py  region_losses.py  selection.py
graph/: __init__.py  edge_processor.py  node_encoder.py
models/: __init__.py  aggregators.py  anchor_utils.py  attention_mask.py  configs.py  dual_graph_forecaster.py  dual_graph_sage.py  epiforecaster.py  forecaster_head.py  graphsage_od.py  mobility_gnn.py  observation_heads.py  region_embedding.py  region_losses.py  sir_rollforward.py  transformer_backbone.py
plotting/: __init__.py  forecast_plots.py  input_plots.py
scripts/: __init__.py  analyze_ablations.py  analyze_cross_head_impact.py  analyze_crossval.py  analyze_dataloader.py  analyze_gradnorm.py  analyze_hop_loss.py  analyze_loss_curve.py  analyze_municipality_representation.py  analyze_optuna_journal.py  analyze_synthetic_sparsity.py  analyze_trace.py  breakdown_step.py  compare_sparsity.py  dataviz_all.sh  dataviz_runner.py  dead_code_analyze.py  detect_bottlenecks.py  eval_crossval_granular.py  extract_optuna_trial_config.py  generate_input_plots.py  generate_sbatch_preview.py  investigate_data.py  lint_code.py  mn5_module_setup.sh  optuna_ablation.sbatch  optuna_ablation_worker.py  optuna_epiforecaster.sbatch  optuna_epiforecaster_context_length.sbatch  optuna_epiforecaster_context_length_worker.py  optuna_epiforecaster_missing_permit.sbatch  optuna_epiforecaster_missing_permit_worker.py  optuna_epiforecaster_worker.py  remote_preprocess.py  remote_train.py  run_ablations.sbatch  run_baseline_eval.py  run_crossval.sbatch  run_crossval_aggregate.sbatch  run_fold_validation.sbatch  (+5 more)
tests/: __init__.py  conftest.py  test_ablation_plots.py  test_ablation_worker.py  test_adjacency_graph_comparison.py  test_aggregate_export.py  test_aggregators.py  test_alignment_processor.py  test_analyze_ablations.py  test_analyze_crossval.py  test_anchor_utils.py  test_baseline_eval.py  test_biomarker_3channel_encoding.py  test_biomarker_4channel_encoding.py  test_biomarker_encoding.py  test_biomarker_scaler_train_only.py  test_canonical_input_comparison.py  test_canonical_vaccination.py  test_cases_preprocessor.py  test_catalonia_cases_processor.py  test_catalonia_processors.py  test_catchment_cases_vs_biomarkers.py  test_config_defaults.py  test_config_load.py  test_config_precision.py  test_config_schema_validation.py  test_cross_head_impact.py  test_crossval_scripts.py  test_curriculum.py  test_dataset_factory.py  test_device.py  test_device_utils.py  test_dtypes.py  test_edar_gap.py  test_edar_processor.py  test_edar_tobit_kalman.py  test_epi_dataset.py  test_epi_dataset_getitem.py  test_epi_dataset_missingness.py  test_epiforecaster.py  (+61 more)
todo/: HOUSECLEANING.md  JOINT_INFERENCE_DESIGN.md  NEW_RAW_DATA.md  OFFLINE_ONLINE_PREPROCESSING.md  PLAN_LAGGED_FEATURES.md  STUDIES.md  TESTING_PLAN.md  TRAINER_REFACTOR.md  TRAINING_CURRICULUM.md  heterogeneous_graph_transition.md  wastewater-variant-detection-data.md
training/: __init__.py  data_manager.py  dataloader_factory.py  epiforecaster_trainer.py  forecaster_trainer.py  grad_utils.py  gradnorm.py  optim_factory.py  pipeline_trainer.py  region2vec_trainer.py  region_embedder_trainer.py  schedulers.py  (+3 more)
(+140 files in other folders)
