[project]
name = "EpiForecaster"
version = "0.1.0"
description = "Graph Neural Network for Mobility-Based Epidemiological Forecasting"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  # PyTorch and PyTorch Geometric
  "torch>=2.0.0",
  "torchvision>=0.15.0",
  "torch-geometric>=2.3.0",
  # Core scientific computing
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "scikit-learn>=1.3.0",
  # Geometric and spatial processing
  "geopandas>=0.13.0",
  "shapely>=2.0.0",
  # PySAL spatial analysis suite
  "libpysal>=4.13.0",
  "esda>=2.6.0",
  "spopt>=0.7.0",
  # Additional utilities
  "scipy>=1.10.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.12.0",
  "tqdm>=4.65.0",
  # Logging and configuration
  "pyyaml>=6.0",
  "jsonlines>=3.1.0",
  # For reproducibility
  "python-dateutil>=2.8.0",
  "pytz>=2023.3",
  "xarray>=2024.7.0",
  "netcdf4>=1.7.2",
  "dask>=2024.8.0",
  "h5netcdf>=1.6.4",
  "plotly>=6.3.0",
  "networkx>=3.5",
  "torch-sparse>=0.6.18",
  "torch-scatter>=2.1.2",
  "pytest>=8.4.1",
  "einops>=0.8.1",
  "click>=8.2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "black>=23.0.0",
  "ruff>=0.1.0",
  "mypy>=1.5.0",
  "pre-commit>=3.4.0",
]
notebook = ["jupyter>=1.0.0", "ipykernel>=6.23.0", "notebook>=7.0.0"]
profiling = ["memory-profiler>=0.60.0", "line-profiler>=4.0.0"]

[project.scripts]
sage = "cli:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["cli"]

[tool.setuptools.packages.find]
include = ["data*", "graph*", "models*", "training*", "utils*", "scripts*"]

[tool.ruff]
target-version = "py39"
line-length = 88
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
]
ignore = [
  "E501", # line too long (handled by black)
  "B008", # do not perform function calls in argument defaults
  "C901", # too complex
  "W191", # indentation contains tabs
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
dev-dependencies = ["ipython>=8.12.0"]
