[project]
name = "EpiForecaster"
version = "0.1.0"
description = "Graph Neural Network for Mobility-Based Epidemiological Forecasting"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  # PyTorch and PyTorch Geometric
  "torch>=2.0.0",
  "torchvision>=0.15.0",
  "torch-geometric>=2.3.0",
  # Core scientific computing
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "scikit-learn>=1.3.0",
  # Geometric and spatial processing
  "geopandas>=0.13.0",
  "shapely>=2.0.0",
  # PySAL spatial analysis suite
  "libpysal>=4.13.0",
  "esda>=2.6.0",
  "spopt>=0.7.0",
  # Additional utilities
  "scipy>=1.10.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.12.0",
  # Logging and configuration
  "pyyaml>=6.0",
  "omegaconf>=2.3.0",
  "jsonlines>=3.1.0",
  # For reproducibility
  "python-dateutil>=2.8.0",
  "pytz>=2023.3",
  "xarray>=2024.7.0",
  "netcdf4>=1.7.2",
  "dask>=2024.8.0",
  "h5netcdf>=1.6.4",
  "plotly>=6.3.0",
  "networkx>=3.5",
  "pytest>=8.4.1",
  "einops>=0.8.1",
  "click>=8.2.1",
  "zarr>=2.18.0",
  "tensorboard>=2.14.0",
  "ipython>=9.6.0",
  "pyright>=1.1.0",
  "types-pyyaml>=6.0.12.20250915",
  # Type stubs for external libraries
  "pandas-stubs>=2.0.0",
  "scipy-stubs>=1.11.0",
  "ipykernel>=7.0.1",
  "folium>=0.20.0",
  "mapclassify>=2.10.0",
  "bottleneck>=1.6.0",
  "pyarrow>=22.0.0",
  "fastparquet>=2024.11.0",
  "torch-tb-profiler>=0.4.3",
  "tensorboard-plugin-profile>=2.21.3",
  "statsmodels>=0.14.6",
]

# Note: torch-scatter and torch-sparse are installed separately using:
# uv pip install torch-scatter torch-sparse -f https://data.pyg.org/whl/torch-2.0.0+cpu.html
# This avoids build issues with these packages.

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "black>=23.0.0",
  "ruff>=0.1.0",
  "pyright>=1.1.0",
  "pre-commit>=3.4.0",
]
notebook = ["jupyter>=1.0.0", "ipykernel>=6.23.0", "notebook>=7.0.0"]
profiling = ["memory-profiler>=0.60.0", "line-profiler>=4.0.0"]

[project.scripts]
main = "cli:cli"

[build-system]
requires = ["setuptools>=45", "wheel", "torch>=2.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["cli"]

[tool.setuptools.packages.find]
include = [
  "data*",
  "graph*",
  "models*",
  "training*",
  "utils*",
  "plotting*",
  "evaluation*",
  "dataviz*",
  "scripts*",
]

[tool.ruff]
target-version = "py311"
line-length = 88
lint.select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade - for type hint modernization
  "T",   # flake8-print (to ensure proper logging)
  "PGH", # pygrep-hooks
]
lint.ignore = [
  "E501", # line too long (handled by black)
  "B008", # do not perform function calls in argument defaults
  "C901", # too complex
  "W191", # indentation contains tabs
  "T201", # print statements - allowed for research code
  "F841", # unused variables - allowed in experimental code
]

[tool.ruff.lint.per-file-ignores]
".__init__.py" = ["F401"]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.pyright]
# As a research codebase, strict type checking is not enforced in CI
# Pyright is used for editor feedback and best-effort type checking
exclude = [
  ".venv",
  "**/__pycache__",
  "**/.pytest_cache",
  "**/.ruff_cache",
  "**/.uv-cache",
  "**/.uv_cache",
  "**/node_modules",
  "**/dataviz/**",
  "**/plotting/**",
  "**/utils/plotting.py",
  "**/utils/data_analytics.py",
  "docker/**",
  "checkpoints/**",
  "outputs/**",
  "reports/**",
  # Preprocessing files have incomplete pandas/GeoPandas type stubs
  "**/data/preprocess/**",
  # Region graph dataset has incomplete zarr type stubs
  "**/data/region_graph_dataset.py",
  # Tests and scripts have various type issues that are not critical
  "**/tests/**",
  "**/scripts/**",
  # Evaluation has torch.utils.data.Dataset protocol issues
  "**/evaluation/epiforecaster_eval.py",
]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportMissingTypeArgument = "none"
reportGeneralTypeIssues = "none"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = ["ipython>=8.12.0"]

# Build dependencies are handled by pip/uv automatically
